--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="login">
-      <main class="login1">
+      <main class="login">
         <a href="./forgot.html" class="olvide-mi-contrasea">Olvide mi contraseña</a>
         <h3 class="recordar-datos">Recordar datos</h3>
 
@@ -66,7 +66,7 @@
           <option value="1">Pasaporte</option>
           <option value="1">CE</option>
         </select>
-        <img class="logokv-1-icon" alt="" src="./public/logokv-11@2x.png" />
+        <img class="logokv-1-icon" alt="" src="./public/logo.png" />
 
         <input class="rectangle3" type="checkbox" />
 
