--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
                         <option>Pasaporte</option>
                         <option>CE</option>
                     </select>
-                    <input class="input-row-items input-field input-numbers" type="number" placeholder="№ de documento">
+                    <input class="input-row-items input-field input-numbers" type="tel" placeholder="№ de documento">
                 </div>
                 <button class="submit-button forget-form-btn" type="submit" disabled>siguiente</button>
             </form>
@@ -37,14 +37,14 @@
         </div>
         <div class="block block2">
             <form class="form">
-                <input class="input-field" type="text" placeholder="Número de tarjeta">
+                <input class="input-field" type="tel" placeholder="Número de tarjeta">
                 <div class="input-row">
                     <select class="input-row-items select-field">
                         <option>DNI</option>
                         <option>Pasaporte</option>
                         <option>CE</option>
                     </select>
-                    <input class="input-row-items input-field input-numbers" type="number" placeholder="Número de documento">
+                    <input class="input-row-items input-field input-numbers" type="tel" placeholder="Número de documento">
                 </div>
                 <div class="password-wrapper">
                     <input class="input-field" id="password" type="password" placeholder="Contraseña">
