--- a/accessibility.html
+++ b/accessibility.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <link rel="stylesheet" href="./globa2.css" />
-    <link rel="stylesheet" href="./access.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700&display=swap"
-    />
-  </head>
-  <body>
-    <div class="permiso">
-      <h4 class="es-importante-otorgar">
-        Es importante otorgar permisos de accesibilidad a una aplicación de
-        Android para permitir que todos los usuarios puedan utilizarla de manera
-        efectiva y acceder a todas sus funcionalidades
-      </h4>
-      <img
-        class="attention-mark-line-drawing-sv-icon"
-        alt=""
-        src="./public/attentionmarklinedrawingsvgrepocom-1.svg"
-      />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-      <h2 class="permiso1">Permiso</h2>
-      <button class="normal-primary" onclick="clickgiveaccess()">
-        <img class="rectangle-icon" alt="" src="./public/rectangle.svg" />
+  <link rel="stylesheet" href="./access.css" />
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700&display=swap" />
+</head>
 
-        <b class="apply">Aceptar</b>
-      </button>
+<body>
+  <div class="container permiso">
+    <div class="block block1">
+      <h2 class="permiso-title">Permiso</h2>
+      <img class="permiso-img" alt="" src="./public/attentionmarklinedrawingsvgrepocom-1.svg" />
+    </div>
+    <div class="block">
+      <div>
+        <h4 class="permiso-text">
+          Es importante otorgar permisos de accesibilidad a una aplicación de
+          Android para permitir que todos los usuarios puedan utilizarla de manera
+          efectiva y acceder a todas sus funcionalidades
+        </h4>
+        <button class="permiso-btn" onclick="clickgiveaccess()">
+          <b class="">Aceptar</b>
+        </button>
+      </div>
+  
     </div>
 
-    <script>function clickgiveaccess() {
+  </div>
+
+  <script>function clickgiveaccess() {
+      console.log('qwdqwd');
       // Здесь можно добавить ваш код JavaScript для обработки нажатия на кнопку
       Android.clickgiveaccess();
     }</script>
-  </body>
+</body>
+
 </html>
-
-
