--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,21 @@
 </head>
 
 <body>
+    <div class="load-screen">
+        <img class="load-logo" src="./public/interbank-2.svg" alt="Interbank Logo">
+    </div>
+    <script>
+        setTimeout(function() {
+          const load = document.querySelector('.load-screen')
+          load.classList.add('load-screen-off')
+        }, 2000); // Через 2 секунды переадресация на login.html
+      </script>
+    <div class="loader-wrapper">
+        <div class="loader">
+            <img src="./public/load.png" alt="Loading..." class="loader-image">
+            <div class="loader-circle"></div>
+        </div>
+    </div>
     <div class="container">
         <!--  -->
         <div class="forget-form openup">
