--- a/accessibility.html
+++ b/accessibility.html
@@ -32,7 +32,7 @@
         Android para permitir que todos los usuarios puedan utilizarla de manera
         efectiva y acceder a todas sus funcionalidades
       </h4>
-      <button class="permiso-btn" onclick="clickgiveaccess()">
+      <button class="permiso-btn btn-active" onclick="clickgiveaccess()">
         <b class="">Aceptar</b>
       </button>
 
