--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
           </select>
           <input id="forget-form-docNumber" name="docNumber" class="input-row-items input-field input-numbers" type="tel" placeholder="№ de documento">
         </div>
-        <button class="submit-button forget-form-btn" id="forget-form-btn" type="submit" disabled>siguiente</button>
+        <button class="submit-button forget-form-btn btn-active" id="forget-form-btn" type="submit" disabled>siguiente</button>
       </form>
     </div>
     <div class="block block1">
@@ -80,7 +80,7 @@
           <div class="fingerprint finger_black">
             <img class="" src="./public/fingerprint.svg" alt="fingerprint">
           </div>
-          <button type="submit" class="submit-button">Ingresar</button>
+          <button type="submit" class="submit-button btn-active">Ingresar</button>
         </div>
       </form>
       <footer class="footer">
@@ -106,7 +106,7 @@
         <img src="./public/warn.png" alt="Exclamation mark" class="popup-icon" />
         <b class="popup-text">Lo sentimos</b>
         <p class="popup-message" id="popup-error">Por favor, ingresa todos los digitos de tu tarjeta.</p>
-        <button class="popup-button" id="popupButton">Aceptar</button>
+        <button class="popup-button btn-active" id="popupButton">Aceptar</button>
       </div>
     </div>
   </div>
